src/objects/Utility_SREC_Contract__c.object
<CustomObject>
    <description>SREC Contracts for deliveries of SRECs to Utility Companies</description>
    <fields>
        <fullName>Broker_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Broker for this Contract</description>
        <inlineHelpText>Broker for this Contract</inlineHelpText>
        <label>Broker Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Utility SREC Contracts (Broker Account)</relationshipLabel>
        <relationshipName>Brokered_Utility_SREC_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <description>Broker</description>
        <inlineHelpText>Broker</inlineHelpText>
        <label>Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Commission__c</fullName>
        <description>Commission of Brokerage in $/SREC</description>
        <inlineHelpText>Commission of Brokerage in $/SREC</inlineHelpText>
        <label>Brokerage Commission ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <description>Does this contract require certification or siting?</description>
        <inlineHelpText>Does this contract require certification or siting?</inlineHelpText>
        <label>Certification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Certified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <description>Contract Execution Date</description>
        <inlineHelpText>Contract Execution Date</inlineHelpText>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>Contract Status</description>
        <inlineHelpText>Contract Status</inlineHelpText>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Are we Buying or Selling SRECs in the Contract?</description>
        <inlineHelpText>Are we Buying or Selling SRECs in the Contract?</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sale</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counterparty_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account of Contract&apos;s Counterparty</description>
        <inlineHelpText>Account of Contract&apos;s Counterparty</inlineHelpText>
        <label>Counterparty Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Utility SREC Contracts</relationshipLabel>
        <relationshipName>Utility_SREC_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligible_States__c</fullName>
        <description>States Where Contract is Eligible to be Certified</description>
        <inlineHelpText>States Where Contract is Eligible to be Certified</inlineHelpText>
        <label>Eligible States</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Max_Contract_Price_SREC__c</fullName>
        <description>Maximum Price of Deliveries on this Contract</description>
        <inlineHelpText>Maximum Price of Deliveries on this Contract</inlineHelpText>
        <label>Max Contract Price ($/SREC)</label>
        <summarizedField>Utility_SREC_Delivery__c.Contract_Price_per_SREC__c</summarizedField>
        <summaryForeignKey>Utility_SREC_Delivery__c.Utility_SREC_Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Required_State_Certification__c</fullName>
        <description>What State Certification is Required?</description>
        <inlineHelpText>What State Certification is Required?</inlineHelpText>
        <label>Required State Certification</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Date__c</fullName>
        <description>Trade Date</description>
        <inlineHelpText>Trade Date</inlineHelpText>
        <label>Trade Date</label>
        <type>Date</type>
    </fields>
    <label>Utility SREC Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Counterparty_Account__c</columns>
        <columns>Required_State_Certification__c</columns>
        <columns>Max_Contract_Price_SREC__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Contract_Execution_Date__c</columns>
        <columns>Trade_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UTILITY-SREC-{000000000}</displayFormat>
        <label>Contract Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility SREC Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>